fix extra spacing

--- a/debugger/style.css
+++ b/debugger/style.css
@@ -154,7 +154,7 @@ h1, h2
         .ƒpreview > .ƒproperty:after
         { content: ','; color: #aaa; }
         .ƒpreview > .ƒproperty:last-child:after
-        { content: ''; margin-left: 2px }
+        { content: ''; }
           .ƒpreview > .ƒproperty > .ƒkey
           { margin-right: 0; }
           .ƒpreview > .ƒproperty > .ƒkey:after
